# openmp

./: CMakeLists.txt  calculo_pi.cpp  correccion_examen.cpp  main.cpp  pi.cpp  reduccion.cpp  reduccion2.cpp  tareagrupo01.cpp
